Managed div overflow attribute for content not covering the header. Need to corret forms default css, setting maxwidth attributes directly on the desired field, and not for the whole space. - Commas on the class definition are wrong, so need to be fixed by AFZ.

--- a/main/static/css/form-pattern/form-main.css
+++ b/main/static/css/form-pattern/form-main.css
@@ -3,7 +3,7 @@
 	background-color: #FFFFFF;
 	top: 20px;
     margin-left: 5%;
-    margin-right:40%;
+    margin-right:5%;
 	position: relative;
 }
 
